# cyber-cygwin

./: .gitignore  README.md
cyber-calculator/: CMakeLists.txt  README.md  calcengine.cpp  calcengine.h  cyber-calculator.desktop  main.cpp  qml.qrc
cyber-calculator/engine/: constants.cpp  evaluator.cpp  functions.cpp
cyber-calculator/qml/: ButtonsPanel.qml  ButtonsView.qml  CTextField.qml  Zone.qml  main.qml
cyber-disk-usage/: .gitignore  CMakeLists.txt  README.md  backend.cpp  backend.h  cyber-disk-usage.desktop  main.cpp  qml.qrc
cyber-disk-usage/qml/: DiskItem.qml  main.qml
cyber-dock/: CMakeLists.txt  resources.qrc
cyber-dock/qml/: AppItem.qml  DockItem.qml  main.qml
cyber-dock/src/: applicationmodel.cpp  applicationmodel.h  docksettings.cpp  docksettings.h  mainwindow.cpp  mainwindow.h  processprovider.cpp  xwindowinterface.cpp  xwindowinterface.h
cyber-fm/: CMakeLists.txt  README.md  cyber-fm.desktop  dateutils.cpp  dateutils.h  dirlister.cpp  dirlister.h  dirselection.cpp  dirselection.h  fileitem.cpp  fileitem.h  filelauncher.cpp  filelauncher.h  fileloader.cpp  fileloader.h  folderlistmodel.cpp  folderlistmodel.h  main.cpp  placesmodel.cpp  placesmodel.h  qml.qrc  terminal.cpp  terminal.h  xdgdesktopfile.cpp  xdgdesktopfile.h  xdgmimeapps.cpp  xdgmimeapps.h
cyber-fm/qml/: ExecPromptDialog.qml  FolderIconDelegate.qml  FolderIconView.qml  FolderItemMenu.qml  FolderListDelegate.qml  FolderListView.qml  FolderMenu.qml  FolderPage.qml  IconButton.qml  PathBar.qml  SideBar.qml  SidebarItem.qml  main.qml
cyber-icon-theme/: CMakeLists.txt  README.md
cyber-icon-theme/Crule/: icon-theme.cache
cyber-icon-theme/Crule-dark/: icon-theme.cache
cyber-kwin-plugins/: CMakeLists.txt  README.md
cyber-kwin-plugins/config/: kwinrc
cyber-kwin-plugins/plugins/blur/: CMakeLists.txt  blur.cpp  blur.h  blur.json  main.cpp
cyber-kwin-plugins/plugins/decoration/: CMakeLists.txt  button.cpp  cyberos.json  decoration.cpp  decoration.h
cyber-kwin-plugins/scripts/launcher/: metadata.desktop
cyber-kwin-plugins/scripts/launcher/contents/: main.js
cyber-launcher/: CMakeLists.txt  README.md  qml.qrc  sortfilterproxymodel.cpp  sortfilterproxymodel.h
cyber-launcher/qml/: LauncherGridDelegate.qml  LauncherGridView.qml  PagedGrid.qml  main.qml
cyber-launcher/src/: iconthemeimageprovider.cpp  iconthemeimageprovider.h  launcher.cpp  launcher.h  launcheritem.cpp  launcheritem.h  launchermodel.cpp  launchermodel.h  main.cpp  org.cyber.Launcher.xml  pagemodel.cpp  pagemodel.h  wallpaper.cpp
cyber-qt-plugins/: CMakeLists.txt  README.md
cyber-qt-plugins/platformtheme/: CMakeLists.txt  cyber-platformtheme.json  hintsettings.cpp  main.cpp  platformtheme.cpp  platformtheme.h  x11integration.cpp
cyber-qt-plugins/widgetstyle/: CMakeLists.txt  basestyle.cpp  cyberstyle.json  pstyleplugin.cpp  pstyleplugin.h  shadowhelper.cpp  shadowhelper.h
cyber-recorder/: CMakeLists.txt  README.md  cyber-recorder.desktop
cyber-recorder/src/: CMakeLists.txt  audioplayer.cpp  audioplayer.h  audioprober.cpp  audiorecorder.cpp  audiorecorder.h  main.cpp  qml.qrc  recordingmodel.cpp  settingsmodel.cpp  utils.cpp
cyber-recorder/src/qml/: HomePage.qml  IconButton.qml  RecordPage.qml  Visualization.qml  main.qml
cyber-settings/: CMakeLists.txt  README.md  cyber-settings.desktop
cyber-settings/src/: about.cpp  about.h  application.cpp  application.h  background.cpp  battery.cpp  battery.h  brightness.cpp  brightness.h  fontsmodel.cpp  fontsmodel.h  language.cpp  main.cpp  org.cyber.SettingsUI.xml  resources.qrc  version.h.in
cyber-settings/src/networkmanager/: appletproxymodel.h  networking.cpp  networking.h  networkitemslist.h  networkmodel.cpp  networkmodel.h  networkmodelitem.h  technologyproxymodel.h  uiutils.h  wiressitemsettings.h
cyber-settings/src/qml/: AboutPage.qml  AppearancePage.qml  BackgroundPage.qml  BatteryItem.qml  BatteryPage.qml  DisplayPage.qml  DockPage.qml  IconButton.qml  IconCheckBox.qml  ItemPage.qml  LanguagePage.qml  NetworkPage.qml  Scrollable.qml  SideBar.qml  StandardItem.qml  WiredItem.qml  WirelessDetailsWindow.qml  WiressItem.qml  main.qml
cyber-statusbar/: CMakeLists.txt  README.md
cyber-statusbar/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  volumecontrolwindow.cpp  volumecontrolwindow.h  windowcontrol.cpp  windowcontrol.h
cyber-statusbar/src/qml/: IconButton.qml  VolumeControl.qml  main.qml
cyber-statusbar/src/statusnotifier/: statusnotifieritemsource.h  statusnotifiermodel.cpp  statusnotifiermodel.h  statusnotifierwatcher.cpp
cyber-terminal/: .gitignore  CMakeLists.txt  README.md  cyber-terminal.desktop
cyber-terminal/qmltermwidget/: qmltermwidget.pro
cyber-terminal/qmltermwidget/lib/color-schemes/: Meui-Dark.colorscheme  Meui-Light.colorscheme
cyber-terminal/qmltermwidget/src/: QMLTermScrollbar.qml  qmldir  qmltermwidget_plugin.cpp  qmltermwidget_plugin.h
cyber-terminal/src/: fonts.cpp  fonts.h  main.cpp
cyber-terminal/src/qml/: main.qml
cyber-wallpapers/: .gitignore  CMakeLists.txt
cyber-wallpapers/unsplash/: ATTRIBUTION  CMakeLists.txt
cyber-workspace/: CMakeLists.txt  README.md
cyber-workspace/desktop-daemon/: CMakeLists.txt  Desktop.qml  desktopview.cpp  desktopview.h  main.cpp  qml.qrc  settings.cpp  settings.h
cyber-workspace/screen-brightness/: CMakeLists.txt  main.cpp  org.cyber.brightness.pkexec.policy
cyber-workspace/session/: CMakeLists.txt  application.cpp  (+3 more)
cyber-workspace/settings-daemon/: CMakeLists.txt  application.cpp  application.h  dbusadaptor.h  main.cpp
cyber-workspace/settings-daemon/battery/: battery.cpp  org.cyber.PrimaryBattery.xml
cyber-workspace/settings-daemon/brightness/: brightnessmanager.cpp  brightnessmanager.h  org.cyber.Brightness.xml
cyber-workspace/settings-daemon/language/: language.cpp  language.h  org.cyber.Language.xml
cyber-workspace/settings-daemon/theme/: org.cyber.Theme.xml  thememanager.cpp  thememanager.h
cyber-workspace/shutdown-ui/: CMakeLists.txt  IconButton.qml  actions.cpp  main.cpp  main.qml
meuikit/: CMakeLists.txt
(+35 files in other folders)
